CompilingPrincipleExperiment/Experiment2_3/parser.output
State 2 conflicts: 1 shift/reduce
State 22 conflicts: 2 shift/reduce
State 35 conflicts: 3 shift/reduce
State 44 conflicts: 1 shift/reduce
State 63 conflicts: 1 reduce/reduce
State 90 conflicts: 1 shift/reduce


Grammar

    0 $accept: P $end

    1 P: L
    2  | L P

    3 L: S ';' M

    4 S: IDN '=' E
    5  | IDN error '=' E
    6  | IDN '=' error E
    7  | IDN error
    8  | error '=' error
    9  | IF C THEN M SP
   10  | IF error C THEN SP
   11  | IF C error THEN SP
   12  | IF C THEN error SP
   13  | IF error THEN SP
   14  | WHILE M C DO M S
   15  | WHILE error M C DO M S
   16  | WHILE M C error DO M S
   17  | WHILE M C error DO error M S
   18  | '{' P '}'
   19  | IF C M SP
   20  | IF C F
   21  | WHILE M C M S
   22  | WHILE M C E
   23  | DO

   24 SP: S
   25   | S M ELSE M S

   26 C: E CP
   27  | E error CP
   28  | error CP

   29 CP: '>' E
   30   | '<' E
   31   | '=' E
   32   | '>' error E
   33   | '<' error E
   34   | '=' error E

   35 E: T
   36  | E '+' T
   37  | E '-' T
   38  | E '+' error T
   39  | E '-' error T

   40 T: F
   41  | T '*' F
   42  | T '/' F
   43  | T '*' error F
   44  | T '/' error F

   45 F: '(' E ')'
   46  | IDN
   47  | INT8
   48  | INT10
   49  | INT16
   50  | FLOAT8
   51  | FLOAT10
   52  | FLOAT16
   53  | '(' E error

   54 M: ε


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 45 53
    ')' (41) 45
    '*' (42) 41 43
    '+' (43) 36 38
    '-' (45) 37 39
    '/' (47) 42 44
    ';' (59) 3
    '<' (60) 30 33
    '=' (61) 4 5 6 8 31 34
    '>' (62) 29 32
    '{' (123) 18
    '}' (125) 18
    error (256) 5 6 7 8 10 11 12 13 15 16 17 27 28 32 33 34 38 39 43 44 53
    WHILE (258) 14 15 16 17 21 22
    IF (259) 9 10 11 12 13 19 20
    THEN (260) 9 10 11 12 13
    ELSE (261) 25
    DO (262) 14 15 16 17 23
    IDN <strval> (263) 4 5 6 7 46
    INT8 <intval> (264) 47
    INT10 <intval> (265) 48
    INT16 <intval> (266) 49
    FLOAT8 <doubleval> (267) 50
    FLOAT10 <doubleval> (268) 51
    FLOAT16 <doubleval> (269) 52


Nonterminals, with rules where they appear

    $accept (27)
        on left: 0
    P <node> (28)
        on left: 1 2
        on right: 0 2 18
    L <node> (29)
        on left: 3
        on right: 1 2
    S <node> (30)
        on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
        on right: 3 14 15 16 17 21 24 25
    SP <node> (31)
        on left: 24 25
        on right: 9 10 11 12 13 19
    C <node> (32)
        on left: 26 27 28
        on right: 9 10 11 12 14 15 16 17 19 20 21 22
    CP <node> (33)
        on left: 29 30 31 32 33 34
        on right: 26 27 28
    E <node> (34)
        on left: 35 36 37 38 39
        on right: 4 5 6 22 26 27 29 30 31 32 33 34 36 37 38 39 45 53
    T <node> (35)
        on left: 40 41 42 43 44
        on right: 35 36 37 38 39 41 42 43 44
    F <node> (36)
        on left: 45 46 47 48 49 50 51 52 53
        on right: 20 40 41 42 43 44
    M <intval> (37)
        on left: 54
        on right: 3 9 14 15 16 17 19 21 22 25


State 0

    0 $accept: • P $end

    error  shift, and go to state 1
    WHILE  shift, and go to state 2
    IF     shift, and go to state 3
    DO     shift, and go to state 4
    IDN    shift, and go to state 5
    '{'    shift, and go to state 6

    P  go to state 7
    L  go to state 8
    S  go to state 9


State 1

    8 S: error • '=' error

    '='  shift, and go to state 10


State 2

   14 S: WHILE • M C DO M S
   15  | WHILE • error M C DO M S
   16  | WHILE • M C error DO M S
   17  | WHILE • M C error DO error M S
   21  | WHILE • M C M S
   22  | WHILE • M C E

    error  shift, and go to state 11

    error    [reduce using rule 54 (M)]
    IDN      reduce using rule 54 (M)
    INT8     reduce using rule 54 (M)
    INT10    reduce using rule 54 (M)
    INT16    reduce using rule 54 (M)
    FLOAT8   reduce using rule 54 (M)
    FLOAT10  reduce using rule 54 (M)
    FLOAT16  reduce using rule 54 (M)
    '('      reduce using rule 54 (M)

    M  go to state 12


State 3

    9 S: IF • C THEN M SP
   10  | IF • error C THEN SP
   11  | IF • C error THEN SP
   12  | IF • C THEN error SP
   13  | IF • error THEN SP
   19  | IF • C M SP
   20  | IF • C F

    error    shift, and go to state 13
    IDN      shift, and go to state 14
    INT8     shift, and go to state 15
    INT10    shift, and go to state 16
    INT16    shift, and go to state 17
    FLOAT8   shift, and go to state 18
    FLOAT10  shift, and go to state 19
    FLOAT16  shift, and go to state 20
    '('      shift, and go to state 21

    C  go to state 22
    E  go to state 23
    T  go to state 24
    F  go to state 25


State 4

   23 S: DO •

    $default  reduce using rule 23 (S)


State 5

    4 S: IDN • '=' E
    5  | IDN • error '=' E
    6  | IDN • '=' error E
    7  | IDN • error

    error  shift, and go to state 26
    '='    shift, and go to state 27


State 6

   18 S: '{' • P '}'

    error  shift, and go to state 1
    WHILE  shift, and go to state 2
    IF     shift, and go to state 3
    DO     shift, and go to state 4
    IDN    shift, and go to state 5
    '{'    shift, and go to state 6

    P  go to state 28
    L  go to state 8
    S  go to state 9


State 7

    0 $accept: P • $end

    $end  shift, and go to state 29


State 8

    1 P: L •
    2  | L • P

    error  shift, and go to state 1
    WHILE  shift, and go to state 2
    IF     shift, and go to state 3
    DO     shift, and go to state 4
    IDN    shift, and go to state 5
    '{'    shift, and go to state 6

    $end  reduce using rule 1 (P)
    '}'   reduce using rule 1 (P)

    P  go to state 30
    L  go to state 8
    S  go to state 9


State 9

    3 L: S • ';' M

    ';'  shift, and go to state 31


State 10

    8 S: error '=' • error

    error  shift, and go to state 32


State 11

   15 S: WHILE error • M C DO M S

    $default  reduce using rule 54 (M)

    M  go to state 33


State 12

   14 S: WHILE M • C DO M S
   16  | WHILE M • C error DO M S
   17  | WHILE M • C error DO error M S
   21  | WHILE M • C M S
   22  | WHILE M • C E

    error    shift, and go to state 34
    IDN      shift, and go to state 14
    INT8     shift, and go to state 15
    INT10    shift, and go to state 16
    INT16    shift, and go to state 17
    FLOAT8   shift, and go to state 18
    FLOAT10  shift, and go to state 19
    FLOAT16  shift, and go to state 20
    '('      shift, and go to state 21

    C  go to state 35
    E  go to state 23
    T  go to state 24
    F  go to state 25


State 13

   10 S: IF error • C THEN SP
   13  | IF error • THEN SP
   28 C: error • CP

    error    shift, and go to state 34
    THEN     shift, and go to state 36
    IDN      shift, and go to state 14
    INT8     shift, and go to state 15
    INT10    shift, and go to state 16
    INT16    shift, and go to state 17
    FLOAT8   shift, and go to state 18
    FLOAT10  shift, and go to state 19
    FLOAT16  shift, and go to state 20
    '<'      shift, and go to state 37
    '>'      shift, and go to state 38
    '='      shift, and go to state 39
    '('      shift, and go to state 21

    C   go to state 40
    CP  go to state 41
    E   go to state 23
    T   go to state 24
    F   go to state 25


State 14

   46 F: IDN •

    $default  reduce using rule 46 (F)


State 15

   47 F: INT8 •

    $default  reduce using rule 47 (F)


State 16

   48 F: INT10 •

    $default  reduce using rule 48 (F)


State 17

   49 F: INT16 •

    $default  reduce using rule 49 (F)


State 18

   50 F: FLOAT8 •

    $default  reduce using rule 50 (F)


State 19

   51 F: FLOAT10 •

    $default  reduce using rule 51 (F)


State 20

   52 F: FLOAT16 •

    $default  reduce using rule 52 (F)


State 21

   45 F: '(' • E ')'
   53  | '(' • E error

    IDN      shift, and go to state 14
    INT8     shift, and go to state 15
    INT10    shift, and go to state 16
    INT16    shift, and go to state 17
    FLOAT8   shift, and go to state 18
    FLOAT10  shift, and go to state 19
    FLOAT16  shift, and go to state 20
    '('      shift, and go to state 21

    E  go to state 42
    T  go to state 24
    F  go to state 25


State 22

    9 S: IF C • THEN M SP
   11  | IF C • error THEN SP
   12  | IF C • THEN error SP
   19  | IF C • M SP
   20  | IF C • F

    error    shift, and go to state 43
    THEN     shift, and go to state 44
    IDN      shift, and go to state 14
    INT8     shift, and go to state 15
    INT10    shift, and go to state 16
    INT16    shift, and go to state 17
    FLOAT8   shift, and go to state 18
    FLOAT10  shift, and go to state 19
    FLOAT16  shift, and go to state 20
    '('      shift, and go to state 21

    error  [reduce using rule 54 (M)]
    WHILE  reduce using rule 54 (M)
    IF     reduce using rule 54 (M)
    DO     reduce using rule 54 (M)
    IDN    [reduce using rule 54 (M)]
    '{'    reduce using rule 54 (M)

    F  go to state 45
    M  go to state 46


State 23

   26 C: E • CP
   27  | E • error CP
   36 E: E • '+' T
   37  | E • '-' T
   38  | E • '+' error T
   39  | E • '-' error T

    error  shift, and go to state 47
    '<'    shift, and go to state 37
    '>'    shift, and go to state 38
    '+'    shift, and go to state 48
    '-'    shift, and go to state 49
    '='    shift, and go to state 39

    CP  go to state 50


State 24

   35 E: T •
   41 T: T • '*' F
   42  | T • '/' F
   43  | T • '*' error F
   44  | T • '/' error F

    '*'  shift, and go to state 51
    '/'  shift, and go to state 52

    $default  reduce using rule 35 (E)


State 25

   40 T: F •

    $default  reduce using rule 40 (T)


State 26

    5 S: IDN error • '=' E
    7  | IDN error •

    '='  shift, and go to state 53

    $default  reduce using rule 7 (S)


State 27

    4 S: IDN '=' • E
    6  | IDN '=' • error E

    error    shift, and go to state 54
    IDN      shift, and go to state 14
    INT8     shift, and go to state 15
    INT10    shift, and go to state 16
    INT16    shift, and go to state 17
    FLOAT8   shift, and go to state 18
    FLOAT10  shift, and go to state 19
    FLOAT16  shift, and go to state 20
    '('      shift, and go to state 21

    E  go to state 55
    T  go to state 24
    F  go to state 25


State 28

   18 S: '{' P • '}'

    '}'  shift, and go to state 56


State 29

    0 $accept: P $end •

    $default  accept


State 30

    2 P: L P •

    $default  reduce using rule 2 (P)


State 31

    3 L: S ';' • M

    $default  reduce using rule 54 (M)

    M  go to state 57


State 32

    8 S: error '=' error •

    $default  reduce using rule 8 (S)


State 33

   15 S: WHILE error M • C DO M S

    error    shift, and go to state 34
    IDN      shift, and go to state 14
    INT8     shift, and go to state 15
    INT10    shift, and go to state 16
    INT16    shift, and go to state 17
    FLOAT8   shift, and go to state 18
    FLOAT10  shift, and go to state 19
    FLOAT16  shift, and go to state 20
    '('      shift, and go to state 21

    C  go to state 58
    E  go to state 23
    T  go to state 24
    F  go to state 25


State 34

   28 C: error • CP

    '<'  shift, and go to state 37
    '>'  shift, and go to state 38
    '='  shift, and go to state 39

    CP  go to state 41


State 35

   14 S: WHILE M C • DO M S
   16  | WHILE M C • error DO M S
   17  | WHILE M C • error DO error M S
   21  | WHILE M C • M S
   22  | WHILE M C • E

    error    shift, and go to state 59
    DO       shift, and go to state 60
    IDN      shift, and go to state 14
    INT8     shift, and go to state 15
    INT10    shift, and go to state 16
    INT16    shift, and go to state 17
    FLOAT8   shift, and go to state 18
    FLOAT10  shift, and go to state 19
    FLOAT16  shift, and go to state 20
    '('      shift, and go to state 21

    error  [reduce using rule 54 (M)]
    WHILE  reduce using rule 54 (M)
    IF     reduce using rule 54 (M)
    DO     [reduce using rule 54 (M)]
    IDN    [reduce using rule 54 (M)]
    '{'    reduce using rule 54 (M)

    E  go to state 61
    T  go to state 24
    F  go to state 25
    M  go to state 62


State 36

   13 S: IF error THEN • SP

    error  shift, and go to state 1
    WHILE  shift, and go to state 2
    IF     shift, and go to state 3
    DO     shift, and go to state 4
    IDN    shift, and go to state 5
    '{'    shift, and go to state 6

    S   go to state 63
    SP  go to state 64


State 37

   30 CP: '<' • E
   33   | '<' • error E

    error    shift, and go to state 65
    IDN      shift, and go to state 14
    INT8     shift, and go to state 15
    INT10    shift, and go to state 16
    INT16    shift, and go to state 17
    FLOAT8   shift, and go to state 18
    FLOAT10  shift, and go to state 19
    FLOAT16  shift, and go to state 20
    '('      shift, and go to state 21

    E  go to state 66
    T  go to state 24
    F  go to state 25


State 38

   29 CP: '>' • E
   32   | '>' • error E

    error    shift, and go to state 67
    IDN      shift, and go to state 14
    INT8     shift, and go to state 15
    INT10    shift, and go to state 16
    INT16    shift, and go to state 17
    FLOAT8   shift, and go to state 18
    FLOAT10  shift, and go to state 19
    FLOAT16  shift, and go to state 20
    '('      shift, and go to state 21

    E  go to state 68
    T  go to state 24
    F  go to state 25


State 39

   31 CP: '=' • E
   34   | '=' • error E

    error    shift, and go to state 69
    IDN      shift, and go to state 14
    INT8     shift, and go to state 15
    INT10    shift, and go to state 16
    INT16    shift, and go to state 17
    FLOAT8   shift, and go to state 18
    FLOAT10  shift, and go to state 19
    FLOAT16  shift, and go to state 20
    '('      shift, and go to state 21

    E  go to state 70
    T  go to state 24
    F  go to state 25


State 40

   10 S: IF error C • THEN SP

    THEN  shift, and go to state 71


State 41

   28 C: error CP •

    $default  reduce using rule 28 (C)


State 42

   36 E: E • '+' T
   37  | E • '-' T
   38  | E • '+' error T
   39  | E • '-' error T
   45 F: '(' E • ')'
   53  | '(' E • error

    error  shift, and go to state 72
    '+'    shift, and go to state 48
    '-'    shift, and go to state 49
    ')'    shift, and go to state 73


State 43

   11 S: IF C error • THEN SP

    THEN  shift, and go to state 74


State 44

    9 S: IF C THEN • M SP
   12  | IF C THEN • error SP

    error  shift, and go to state 75

    error  [reduce using rule 54 (M)]
    WHILE  reduce using rule 54 (M)
    IF     reduce using rule 54 (M)
    DO     reduce using rule 54 (M)
    IDN    reduce using rule 54 (M)
    '{'    reduce using rule 54 (M)

    M  go to state 76


State 45

   20 S: IF C F •

    $default  reduce using rule 20 (S)


State 46

   19 S: IF C M • SP

    error  shift, and go to state 1
    WHILE  shift, and go to state 2
    IF     shift, and go to state 3
    DO     shift, and go to state 4
    IDN    shift, and go to state 5
    '{'    shift, and go to state 6

    S   go to state 63
    SP  go to state 77


State 47

   27 C: E error • CP

    '<'  shift, and go to state 37
    '>'  shift, and go to state 38
    '='  shift, and go to state 39

    CP  go to state 78


State 48

   36 E: E '+' • T
   38  | E '+' • error T

    error    shift, and go to state 79
    IDN      shift, and go to state 14
    INT8     shift, and go to state 15
    INT10    shift, and go to state 16
    INT16    shift, and go to state 17
    FLOAT8   shift, and go to state 18
    FLOAT10  shift, and go to state 19
    FLOAT16  shift, and go to state 20
    '('      shift, and go to state 21

    T  go to state 80
    F  go to state 25


State 49

   37 E: E '-' • T
   39  | E '-' • error T

    error    shift, and go to state 81
    IDN      shift, and go to state 14
    INT8     shift, and go to state 15
    INT10    shift, and go to state 16
    INT16    shift, and go to state 17
    FLOAT8   shift, and go to state 18
    FLOAT10  shift, and go to state 19
    FLOAT16  shift, and go to state 20
    '('      shift, and go to state 21

    T  go to state 82
    F  go to state 25


State 50

   26 C: E CP •

    $default  reduce using rule 26 (C)


State 51

   41 T: T '*' • F
   43  | T '*' • error F

    error    shift, and go to state 83
    IDN      shift, and go to state 14
    INT8     shift, and go to state 15
    INT10    shift, and go to state 16
    INT16    shift, and go to state 17
    FLOAT8   shift, and go to state 18
    FLOAT10  shift, and go to state 19
    FLOAT16  shift, and go to state 20
    '('      shift, and go to state 21

    F  go to state 84


State 52

   42 T: T '/' • F
   44  | T '/' • error F

    error    shift, and go to state 85
    IDN      shift, and go to state 14
    INT8     shift, and go to state 15
    INT10    shift, and go to state 16
    INT16    shift, and go to state 17
    FLOAT8   shift, and go to state 18
    FLOAT10  shift, and go to state 19
    FLOAT16  shift, and go to state 20
    '('      shift, and go to state 21

    F  go to state 86


State 53

    5 S: IDN error '=' • E

    IDN      shift, and go to state 14
    INT8     shift, and go to state 15
    INT10    shift, and go to state 16
    INT16    shift, and go to state 17
    FLOAT8   shift, and go to state 18
    FLOAT10  shift, and go to state 19
    FLOAT16  shift, and go to state 20
    '('      shift, and go to state 21

    E  go to state 87
    T  go to state 24
    F  go to state 25


State 54

    6 S: IDN '=' error • E

    IDN      shift, and go to state 14
    INT8     shift, and go to state 15
    INT10    shift, and go to state 16
    INT16    shift, and go to state 17
    FLOAT8   shift, and go to state 18
    FLOAT10  shift, and go to state 19
    FLOAT16  shift, and go to state 20
    '('      shift, and go to state 21

    E  go to state 88
    T  go to state 24
    F  go to state 25


State 55

    4 S: IDN '=' E •
   36 E: E • '+' T
   37  | E • '-' T
   38  | E • '+' error T
   39  | E • '-' error T

    '+'  shift, and go to state 48
    '-'  shift, and go to state 49

    $default  reduce using rule 4 (S)


State 56

   18 S: '{' P '}' •

    $default  reduce using rule 18 (S)


State 57

    3 L: S ';' M •

    $default  reduce using rule 3 (L)


State 58

   15 S: WHILE error M C • DO M S

    DO  shift, and go to state 89


State 59

   16 S: WHILE M C error • DO M S
   17  | WHILE M C error • DO error M S

    DO  shift, and go to state 90


State 60

   14 S: WHILE M C DO • M S

    $default  reduce using rule 54 (M)

    M  go to state 91


State 61

   22 S: WHILE M C E •
   36 E: E • '+' T
   37  | E • '-' T
   38  | E • '+' error T
   39  | E • '-' error T

    '+'  shift, and go to state 48
    '-'  shift, and go to state 49

    $default  reduce using rule 22 (S)


State 62

   21 S: WHILE M C M • S

    error  shift, and go to state 1
    WHILE  shift, and go to state 2
    IF     shift, and go to state 3
    DO     shift, and go to state 4
    IDN    shift, and go to state 5
    '{'    shift, and go to state 6

    S  go to state 92


State 63

   24 SP: S •
   25   | S • M ELSE M S

    ELSE      reduce using rule 24 (SP)
    ELSE      [reduce using rule 54 (M)]
    $default  reduce using rule 24 (SP)

    M  go to state 93


State 64

   13 S: IF error THEN SP •

    $default  reduce using rule 13 (S)


State 65

   33 CP: '<' error • E

    IDN      shift, and go to state 14
    INT8     shift, and go to state 15
    INT10    shift, and go to state 16
    INT16    shift, and go to state 17
    FLOAT8   shift, and go to state 18
    FLOAT10  shift, and go to state 19
    FLOAT16  shift, and go to state 20
    '('      shift, and go to state 21

    E  go to state 94
    T  go to state 24
    F  go to state 25


State 66

   30 CP: '<' E •
   36 E: E • '+' T
   37  | E • '-' T
   38  | E • '+' error T
   39  | E • '-' error T

    '+'  shift, and go to state 48
    '-'  shift, and go to state 49

    $default  reduce using rule 30 (CP)


State 67

   32 CP: '>' error • E

    IDN      shift, and go to state 14
    INT8     shift, and go to state 15
    INT10    shift, and go to state 16
    INT16    shift, and go to state 17
    FLOAT8   shift, and go to state 18
    FLOAT10  shift, and go to state 19
    FLOAT16  shift, and go to state 20
    '('      shift, and go to state 21

    E  go to state 95
    T  go to state 24
    F  go to state 25


State 68

   29 CP: '>' E •
   36 E: E • '+' T
   37  | E • '-' T
   38  | E • '+' error T
   39  | E • '-' error T

    '+'  shift, and go to state 48
    '-'  shift, and go to state 49

    $default  reduce using rule 29 (CP)


State 69

   34 CP: '=' error • E

    IDN      shift, and go to state 14
    INT8     shift, and go to state 15
    INT10    shift, and go to state 16
    INT16    shift, and go to state 17
    FLOAT8   shift, and go to state 18
    FLOAT10  shift, and go to state 19
    FLOAT16  shift, and go to state 20
    '('      shift, and go to state 21

    E  go to state 96
    T  go to state 24
    F  go to state 25


State 70

   31 CP: '=' E •
   36 E: E • '+' T
   37  | E • '-' T
   38  | E • '+' error T
   39  | E • '-' error T

    '+'  shift, and go to state 48
    '-'  shift, and go to state 49

    $default  reduce using rule 31 (CP)


State 71

   10 S: IF error C THEN • SP

    error  shift, and go to state 1
    WHILE  shift, and go to state 2
    IF     shift, and go to state 3
    DO     shift, and go to state 4
    IDN    shift, and go to state 5
    '{'    shift, and go to state 6

    S   go to state 63
    SP  go to state 97


State 72

   53 F: '(' E error •

    $default  reduce using rule 53 (F)


State 73

   45 F: '(' E ')' •

    $default  reduce using rule 45 (F)


State 74

   11 S: IF C error THEN • SP

    error  shift, and go to state 1
    WHILE  shift, and go to state 2
    IF     shift, and go to state 3
    DO     shift, and go to state 4
    IDN    shift, and go to state 5
    '{'    shift, and go to state 6

    S   go to state 63
    SP  go to state 98


State 75

   12 S: IF C THEN error • SP

    error  shift, and go to state 1
    WHILE  shift, and go to state 2
    IF     shift, and go to state 3
    DO     shift, and go to state 4
    IDN    shift, and go to state 5
    '{'    shift, and go to state 6

    S   go to state 63
    SP  go to state 99


State 76

    9 S: IF C THEN M • SP

    error  shift, and go to state 1
    WHILE  shift, and go to state 2
    IF     shift, and go to state 3
    DO     shift, and go to state 4
    IDN    shift, and go to state 5
    '{'    shift, and go to state 6

    S   go to state 63
    SP  go to state 100


State 77

   19 S: IF C M SP •

    $default  reduce using rule 19 (S)


State 78

   27 C: E error CP •

    $default  reduce using rule 27 (C)


State 79

   38 E: E '+' error • T

    IDN      shift, and go to state 14
    INT8     shift, and go to state 15
    INT10    shift, and go to state 16
    INT16    shift, and go to state 17
    FLOAT8   shift, and go to state 18
    FLOAT10  shift, and go to state 19
    FLOAT16  shift, and go to state 20
    '('      shift, and go to state 21

    T  go to state 101
    F  go to state 25


State 80

   36 E: E '+' T •
   41 T: T • '*' F
   42  | T • '/' F
   43  | T • '*' error F
   44  | T • '/' error F

    '*'  shift, and go to state 51
    '/'  shift, and go to state 52

    $default  reduce using rule 36 (E)


State 81

   39 E: E '-' error • T

    IDN      shift, and go to state 14
    INT8     shift, and go to state 15
    INT10    shift, and go to state 16
    INT16    shift, and go to state 17
    FLOAT8   shift, and go to state 18
    FLOAT10  shift, and go to state 19
    FLOAT16  shift, and go to state 20
    '('      shift, and go to state 21

    T  go to state 102
    F  go to state 25


State 82

   37 E: E '-' T •
   41 T: T • '*' F
   42  | T • '/' F
   43  | T • '*' error F
   44  | T • '/' error F

    '*'  shift, and go to state 51
    '/'  shift, and go to state 52

    $default  reduce using rule 37 (E)


State 83

   43 T: T '*' error • F
